...
        <!--Application-->
        <scene sceneID="lsH-jy-eP4">
            <objects>
                <customObject id="Fkg-Y0-35E" customClass="SUUpdater"/>
                <customObject id="hbL-WD-91l" userLabel="First Responder" customClass="NSResponder" sceneMemberID="firstResponder"/>
                <customObject id="ev8-l2-p2M" customClass="NSFontManager"/>
                <customObject id="RpS-ln-g5c" userLabel="Delegate" customClass="AppDelegate" customModule="SlimHUD" customModuleProvider="target">
                    <connections>
                        <outlet property="statusMenu" destination="H2T-wn-cOi" id="3Tt-yF-EdJ"/>
                    </connections>
                </customObject>
                <application id="Tr2-0q-69d" sceneMemberID="viewController">
                    <menu key="mainMenu" title="Main Menu" systemMenu="main" id="Dag-xE-9ax">
                        <items>
                            <menuItem title="SlimHUD" id="fW0-eE-vVr" userLabel="SlimHUD">
                                <modifierMask key="keyEquivalentModifierMask"/>
                                <menu key="submenu" title="SlimHUD" id="H2T-wn-cOi" userLabel="statusMenu">
                                    <items>
                                        <menuItem title="About..." id="Y7B-0i-puc">
                                            <modifierMask key="keyEquivalentModifierMask"/>
                                            <connections>
                                                <segue destination="YmN-fR-kvf" kind="show" id="AX0-B7-Ztn"/>
                                            </connections>
                                        </menuItem>
                                        <menuItem title="Check for Updates..." id="5S5-O1-oWe">
...
