...
        <deployment identifier="macosx"/>
        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="16096"/>
        <capability name="System colors introduced in macOS 10.14" minToolsVersion="10.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <customObject id="-2" userLabel="File's Owner" customClass="SettingsWindowController" customModule="SlimHUD" customModuleProvider="target"/>
        <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
        <userDefaultsController id="Bmh-m6-5L8"/>
        <window title="Cyanocitta - Settings" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" titlebarAppearsTransparent="YES" id="7AE-S0-Vk1">
            <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" texturedBackground="YES"/>
            <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
...
                                                <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                                                <font key="font" metaFont="system"/>
                                                <menu key="menu" id="o9o-LJ-LWQ">
                                                    <items>
                                                        <menuItem title="Left" state="on" id="WUQ-ST-anx"/>
                                                        <menuItem title="Bottom" id="0J9-mU-tAz"/>
                                                        <menuItem title="Top" id="yKo-bS-Zy0"/>
                                                        <menuItem title="Right" id="LFt-WS-iHg" userLabel="Right">
                                                            <modifierMask key="keyEquivalentModifierMask"/>
                                                        </menuItem>
                                                    </items>
                                                </menu>
                                            </popUpButtonCell>
...
