...
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Window Controller-->
        <scene sceneID="h3s-5o-cI4">
            <objects>
                <windowController showSeguePresentationStyle="single" id="Lls-Rj-kcl" customClass="SettingsWindowController" customModule="SlimHUD" customModuleProvider="target" sceneMemberID="viewController">
                    <window key="window" title="SlimHUD" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" frameAutosaveName="" animationBehavior="default" tabbingIdentifier="settings" titlebarAppearsTransparent="YES" id="wHn-8U-RzU">
                        <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" texturedBackground="YES" fullSizeContentView="YES"/>
                        <windowPositionMask key="initialPositionMask" leftStrut="YES" rightStrut="YES" topStrut="YES" bottomStrut="YES"/>
                        <rect key="contentRect" x="425" y="462" width="480" height="270"/>
                        <rect key="screenRect" x="0.0" y="0.0" width="2560" height="1415"/>
                        <view key="contentView" id="aA4-Yy-Rkx">
...
                                                <popUpButtonCell key="cell" type="push" title="None" bezelStyle="rounded" alignment="left" lineBreakMode="truncatingTail" state="on" borderStyle="borderAndBezel" imageScaling="proportionallyDown" inset="2" selectedItem="Ciy-bE-ju3" id="1GT-hJ-uaK">
                                                    <behavior key="behavior" lightByBackground="YES" lightByGray="YES"/>
                                                    <font key="font" metaFont="menu"/>
                                                    <menu key="menu" id="BJb-gc-Hfi">
                                                        <items>
                                                            <menuItem title="None" state="on" id="Ciy-bE-ju3"/>
                                                            <menuItem title="Standard" id="WfV-El-pdQ"/>
                                                            <menuItem title="Custom..." id="Nih-C6-cCx"/>
                                                        </items>
                                                    </menu>
                                                </popUpButtonCell>
                                                <connections>
                                                    <action selector="shadowTypeClicked:" target="oXP-qf-ooD" id="gba-XY-hSn"/>
                                                </connections>
...
