...
        buttonTop.edge = .top
        buttonLeft.edge = .left
        buttonRight.edge = .right
        buttonBottom.edge = .bottom

        // needed for UI Tests
        buttonTop.title = "Top"
        buttonLeft.title = "Left"
        buttonRight.title = "Right"
        buttonBottom.title = "Bottom"
    }

    // used by the delegate to update the buttons' states
...
